# fwparser

./: .gitignore  LICENSE  README.md  pyproject.toml
fwparser/: __init__.py  errors.py  fwparser.py  pandas.py  polars.py  toml_parser.py  utilities.py
test/: test_data.txt  test_pandas.py  test_parse.py  test_polars.py  test_toml.py  test_toml.toml  test_valid_toml.toml
