[project]
name = "fwParser"
description = "A simple parser for fixed width files!"
keywords = ["text", "fixed width"]
readme = "README.md"
license = {file = "LICENSE"}
version = "0.1.1"
requires-python = ">=3.8"
authors = [
	{name = "Antony G."}
]
maintainers = [
	{name = "Antony G."}
]

[project.optional-dependencies]
toml = ["tomli"]
pandas = ["pandas", "tomli"]
polars = ["polars", "tomli"]
all = ["polars", "pandas", "tomli"]
dev = ["pandas", "polars", "tomli"]

[pyproject.urls]
Homepage = "https://github.com/avgra3/fwparser"
Documentation = "https://github.com/avgra3/fwparser/blob/main/README.md"
Repository = "https://github.com/avgra3/fwparser"
"Bug Tracker" = "https://github.com/avgra3/fwparser/issues"
